; ModuleID = '/home/carl/AnghaBench/openpilot/phonelibs/nanovg/extr_nanovg.c_nvgTransformSkewY.c'
source_filename = "/home/carl/AnghaBench/openpilot/phonelibs/nanovg/extr_nanovg.c_nvgTransformSkewY.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nvgTransformSkewY(float* %0, float %1) #0 {
  %3 = alloca float*, align 8
  %4 = alloca float, align 4
  store float* %0, float** %3, align 8
  store float %1, float* %4, align 4
  %5 = load float*, float** %3, align 8
  %6 = getelementptr inbounds float, float* %5, i64 0
  store float 1.000000e+00, float* %6, align 4
  %7 = load float, float* %4, align 4
  %8 = call float @nvg__tanf(float %7)
  %9 = load float*, float** %3, align 8
  %10 = getelementptr inbounds float, float* %9, i64 1
  store float %8, float* %10, align 4
  %11 = load float*, float** %3, align 8
  %12 = getelementptr inbounds float, float* %11, i64 2
  store float 0.000000e+00, float* %12, align 4
  %13 = load float*, float** %3, align 8
  %14 = getelementptr inbounds float, float* %13, i64 3
  store float 1.000000e+00, float* %14, align 4
  %15 = load float*, float** %3, align 8
  %16 = getelementptr inbounds float, float* %15, i64 4
  store float 0.000000e+00, float* %16, align 4
  %17 = load float*, float** %3, align 8
  %18 = getelementptr inbounds float, float* %17, i64 5
  store float 0.000000e+00, float* %18, align 4
  ret void
}

declare dso_local float @nvg__tanf(float) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
